modules/core/main/default/objects/WorkOrderLineItem/fields/ApprovalComments__c.field-meta.xml
<CustomField>
    <fullName>ApprovalComments__c</fullName>
    <inlineHelpText>Adding Comments upon rejection is mandatory.</inlineHelpText>
    <label>Approval Comments</label>
    <type>TextArea</type>
</CustomField>