modules/core/main/default/objects/WorkOrderLineItem/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor</fullName>
                <default>true</default>
                <label>Motor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>