modules/core/main/default/objects/WorkOrderLineItem/fields/Is_Task_Chargeable__c.field-meta.xml
<CustomField>
    <fullName>Is_Task_Chargeable__c</fullName>
    <label>Is Task Chargeable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>