modules/core/main/default/objects/WorkOrderLineItem/fields/Part_Id__c.field-meta.xml
<CustomField>
    <fullName>Part_Id__c</fullName>
    <label>Part Id</label>
    <type>TextArea</type>
</CustomField>