modules/core/main/default/objects/WorkOrderLineItem/fields/Reason_to_Perform__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Perform__c</fullName>
    <label>Reason to Perform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Safety Fixes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>