modules/core/main/default/objects/WorkOrderLineItem/fields/SupervisorApproval__c.field-meta.xml
<CustomField>
    <fullName>SupervisorApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supervisor Approval?</label>
    <type>Checkbox</type>
</CustomField>