modules/core/main/default/objects/WorkOrderLineItem/fields/Type_Of_Labor__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Labor__c</fullName>
    <label>Type Of Labor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal Hours</fullName>
                <default>true</default>
                <label>Normal Hours</label>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>