modules/core/main/default/objects/WorkOrderLineItem/validationRules/ApprovalCommentsRequiredOnRejection.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovalCommentsRequiredOnRejection</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(ApprovalStatus__c , &apos;Rejected&apos;) &amp;&amp;
ApprovalComments__c = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>ApprovalComments__c</errorDisplayField>
    <errorMessage>Upon Rejection, Approval Comments field is required.</errorMessage>
</ValidationRule>